--- a/src/main/resources/templates/shop-main.html
+++ b/src/main/resources/templates/shop-main.html
@@ -11,6 +11,11 @@
 
 <div class="container mt-5">
     <h1>Shop pages</h1>
+    <div th:each="el : ${products}" class="alert alert-info mt-2">
+        <h3 th:text="${el.title}"/>
+        <p th:text="${el.price}"/>
+        <a th:href="'/shop/' + ${el.id}">Description</a>
+    </div>
 </div>
 
 <div th:insert="bloks/footer :: footer"></div>
