--- a/src/main/resources/templates/shop-details.html
+++ b/src/main/resources/templates/shop-details.html
@@ -10,11 +10,13 @@
 <header th:insert="bloks/header :: header"></header>
 
 <div class="container mt-5">
-    <h1>Shop pages</h1>
-    <div th:each="el : ${products}" class="alert alert-info mt-2">
-        <h3 th:text="${el.title}"/>
+    <div th:each="el : ${product}" class="alert alert-info mt-2">
+        <h1 th:text="${el.title}"/>
+        <p th:text="${el.description}"/>
         <p th:text="${el.price}"/>
-        <a th:href="'/shop/' + ${el.id}" class="btn btn-warning">Description</a>
+        <p th:text="${el.views}"/>
+        <a th:href="'/shop/' + ${el.id} + '/edit'" class="btn btn-warning">Edit</a>
+        <a th:href="'/shop/' + ${el.id} + '/remove'" class="btn btn-warning">Remove product</a>
     </div>
 </div>
 
