--- a/src/main/resources/templates/bloks/header.html
+++ b/src/main/resources/templates/bloks/header.html
@@ -13,7 +13,7 @@
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
             <a class="me-3 py-2 text-dark text-decoration-none" href="/">Home</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/shop">Shop</a>
-            <a class="me-3 py-2 text-dark text-decoration-none" href="/shop/add">New product</a>
+            <a class="me-3 py-2 text-dark text-decoration-none" href="/product/add">New product</a>
             <a class="me-3 py-2 text-dark text-decoration-none" href="/about">About</a>
         </nav>
         <a class="me-3 py-2 btn btn-outline-primary" href="#">Sing up</a>
