--- a/src/main/resources/templates/product-add.html
+++ b/src/main/resources/templates/product-add.html
@@ -11,7 +11,7 @@
 
 <div class="container mt-5" mb-5>
     <h1>Add product</h1>
-    <form action="/shop/add" method="post">
+    <form action="/product/add" method="post">
         <input type="text" name="title" placeholder="enter product name" class="form-control"><br>
         <textarea name="description" placeholder="enter product description" class="form-control"></textarea><br>
         <input type="text" name="price" placeholder="enter product price" class="form-control"><br>
