--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -15,8 +15,8 @@
         <p th:text="${el.description}"/>
         <p th:text="${el.price}"/>
         <p th:text="${el.views}"/>
-        <a th:href="'/shop/' + ${el.id} + '/edit'" class="btn btn-warning">Edit</a>
-        <a th:href="'/shop/' + ${el.id} + '/remove'" class="btn btn-warning">Remove product</a>
+        <a th:href="'/product/' + ${el.id} + '/edit'" class="btn btn-warning">Edit</a>
+        <a th:href="'/product/' + ${el.id} + '/remove'" class="btn btn-warning">Remove product</a>
     </div>
 </div>
 
